# svc-itest

./: .cspell.project-words.txt  .env.base  .env.repo  .link-checker.config.json  .terraform_init  .tofu_init  Cargo.toml  LICENSE  README.md  docker-compose.yml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: rest.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
server/: Cargo.toml  README.md
server/src/: config.rs  lib.rs  main.rs
server/src/grpc/: client.rs  server.rs
server/src/rest/: api.rs  mod.rs  server.rs
server/tests/: integration_test.rs
